k8/project1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project1
  labels:
    app: project1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project1
  template:
    metadata:
      labels:
        app: project1
    spec:
      containers:
      - name: project1-container
        image: python:3.9
        command: ["sh", "-c", "cd /app && python -m http.server 8080"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: html-volume
          mountPath: /app
          readOnly: true
      volumes:
      - name: html-volume
        configMap:
          name: project1-html

---
apiVersion: v1
kind: Service
metadata:
  name: project1-service
  labels:
    app: project1
spec:
  selector:
    app: project1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
